# momoim

./: CMakeLists.txt  README.md  count.sh
1/: CMakeLists.txt  befen.c  list.c  test2.c  tmp.txt
client/: Addgroup.c  Addgroup.h  CMakeLists.txt  ChartLook.c  ChartLook.h  ChartRecord.c  ChartRecord.h  ClientSockfd.c  ClientSockfd.h  Infomation.c  Infomation.h  MainInterface.c  MainInterface.h  Managegroup.c  Managegroup.h  MessageLoop.c  OnlineFile.c  OnlineFile.h  PopupWinds.c  PopupWinds.h  ScreenShot.c  ScreenShot.h  SetupWind.c  SetupWind.h  UpdataFriendList.c  UpdataFriendList.h  addfriend.c  addfriend.h  audio.c  audio.h  changestatus.c  chart.c  chart.h  chartmessage.c  chartmessage.h  cl  client.c  client.h  common.c  common.h  (+6 more)
client/common/: draw.c  util.c
client/include/: ChartLook.h  ChartRecord.h  ClientSockfd.h  Infomation.h  MainInterface.h  ManageGroup.h  ScreenShot.h  UpdataFriendList.h  chart.h  chartmessage.h  client.h  common.h  friend.h  newuser.h  onlylookinfo.h
client/manage_friend/: AcceptFriendRequest.c  AddFriend.c  DeleteFriend.c  friend.h
client/managegroup/: AddGroup.c  DeleteGroup.c  FriendsGroupMove.c  ManageGroup.h  MoveGroup.c  RenameGroup.c
dpkg/: build.sh
dpkg/momo-client_0.0.1/DEBIAN/: control
dpkg/momo-server_0.0.1/DEBIAN/: control  postinst  prerm
imcommon/: CMakeLists.txt  fileutil.c  friends.c  message.c  recursive.c
imcommon/include/: sqlite3.h
imcommon/include/imcommon/: fileutil.h  friends.h  message.h  recursive.h  user.h
logger/: CMakeLists.txt  logger.c
logger/include/: logger.h
media/: CMakeLists.txt  audio.c  audio.h  client.c  jpeg_to_rgb.c  main.c  sndwav.c  sndwav_common.c  sound.h  video.c  video.h  yuv422_rgb.c  yuv422_rgb.h  yuv_to_jpeg.c
p2p/: CMakeLists.txt  p2p.c
p2p/include/: p2p.h
protocol/: CMakeLists.txt  base.c  init.c
protocol/include/: protocol.h
protocol/include/protocol/: CRPPackets.h  base.h  packets.h  socket.h
protocol/include/protocol/file/: Data.h  DataEnd.h  DataStart.h  Proxy.h  Request.h  Reset.h  StoreAccept.h  StoreRequest.h
protocol/include/protocol/friend/: Accept.h  Add.h  Data.h  Delete.h  Discover.h  GroupAdd.h  GroupDelete.h  GroupMove.h  GroupRename.h  Move.h  Notify.h  Request.h  SearchByNickname.h  SearchByUsername.h  UserList.h
protocol/include/protocol/info/: Data.h  PasswordChange.h  Query.h  Request.h  StatusChange.h
protocol/include/protocol/login/: Accept.h  Login.h  LoginFailure.h  Logout.h  Register.h
protocol/include/protocol/message/: Discover.h  Normal.h  QueryOffline.h  RecordData.h  RecordNext.h  RecordQuery.h  RecordSeek.h  Text.h  TextMessage.h
protocol/include/protocol/net/: Detected.h  Discover.h  DiscoverAccept.h  DiscoverRefuse.h  FriendDiscover.h  InetAddress.h  NATAccept.h  NATDiscover.h  NATReady.h  NATRefuse.h  NATRegister.h  NATRequest.h  QualityTest.h
protocol/include/protocol/p2p/: Detected.h  Discover.h  QualityTest.h
protocol/include/protocol/status/: Cancel.h  Crash.h  Failure.h  Hello.h  KeepAlive.h  Kick.h  OK.h  SwitchProtocol.h
protocol/packets/Login/: Login.c  LoginFailure.c
protocol/packets/file/: Data.c  DataEnd.c  DataStart.c  Proxy.c  Request.c  Reset.c  StoreAccept.c  StoreRequest.c
protocol/packets/friend/: Accept.c  Add.c  Data.c  Delete.c  Discover.c  GroupAdd.c  GroupDelete.c  GroupMove.c  GroupRename.c  Move.c  Notify.c  Request.c  SearchByNickname.c  SearchByUsername.c  UserList.c
protocol/packets/info/: Data.c  PasswordChange.c  Query.c  Request.c  StatusChange.c
protocol/packets/login/: Accept.c  Login.c  LoginFailure.c  Logout.c  Register.c
protocol/packets/message/: Normal.c  QueryOffline.c  RecordData.c  RecordNext.c  RecordQuery.c  RecordSeek.c  Text.c  TextMessage.c
protocol/packets/net/: Detected.c  Discover.c  DiscoverAccept.c  DiscoverRefuse.c  FriendDiscover.c  InetAddress.c  NATAccept.c  NATDiscover.c  NATReady.c  NATRefuse.c  NATRegister.c  NATRequest.c  QualityTest.c
protocol/packets/p2p/: Discover.c  QualityTest.c
protocol/packets/status/: Cancel.c  Crash.c  Failure.c  Hello.c  KeepAlive.c  Kick.c  OK.c  SwitchProtocol.c
protocol_test/: CMakeLists.txt  frienddata.c  friendrequest.c  info.c  infodata.c  inforequest.c  logintest.c  main.c  message.c  status.c  test.h
server/: CMakeLists.txt  jobs.c  listener.c  server.c  user.c  worker.c
server/data/: auth.c  base.c  file.c  friends.c  user.c
server/datafile/: auth.c  file.c  friends.c  init.c  message.c  storage.c  user.c
server/include/: config.h  jobs.h  packets.h  server.h  sqlite3.h  user.h  worker.h
server/include/data/: auth.h  base.h  file.h  friend.h  user.h
server/include/datafile/: auth.h  friend.h  init.h  message.h  user.h
server/include/run/: Structures.h  cli.h  gc.h  io.h  jobs.h  natTraversal.h  user.h  worker.h
server/packets/file/: Data.c  DataEnd.c  Request.c  Reset.c  StoreRequest.c
server/packets/friend/: Accept.c  Add.c  Delete.c  Discover.c  GroupAdd.c  GroupDelete.c  GroupMove.c  GroupRename.c  Move.c  Request.c  SearchByNickname.c  SearchByUsername.c
server/packets/info/: Data.c  PasswordChange.c  Query.c  Request.c  StatusChange.c
server/packets/login/: Login.c  Logout.c  Register.c
server/packets/message/: Normal.c  QueryOffline.c  RecordNext.c  RecordQuery.c  RecordSeek.c  Text.c  TextMessage.c
server/packets/net/: Discover.c  DiscoverAccept.c  DiscoverRefuse.c  FriendDiscover.c  NATAccept.c  NATDiscover.c  NATReady.c  NATRefuse.c  NATRegister.c  NATRequest.c
server/packets/status/: Cancel.c  Crash.c  Failure.c  Hello.c  KeepAlive.c  OK.c  SwitchProtocol.c
server/run/: cli.c  gc.c  io.c  jobs.c  listener.c  natTraversal.c  operation.c  user.c  worker.c
server_data/: auth.db  auth.sql  clean  info.db
server_data/user/00/100/: friends  info
server_data/user/01/100/: friends  info
server_test/: CMakeLists.txt  load_login.c  load_reg.c  login.c  main.c  pressure.c
