cmake_minimum_required(VERSION 2.8.4)
project(momo)
add_definitions ("-Wall")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")

if(CMAKE_BUILD_TYPE STREQUAL "Release")
    SET(CMAKE_SKIP_BUILD_RPATH FALSE)
    SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
    SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

    if(MOMO_TARGET STREQUAL "Server")
        SET(CMAKE_INSTALL_RPATH "/opt/momo-server")
    elseif(MOMO_TARGET STREQUAL "Client")
        SET(CMAKE_INSTALL_RPATH "/opt/momo")
    else()
        message("MOMO_TARGET is not set")
        return()
    endif()
endif()
#SET(CMAKE_SKIP_BUILD_RPATH FALSE)
#SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
#SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
#SET(CMAKE_INSTALL_RPATH "/opt/momo")
#add_subdirectory(1)
add_subdirectory(logger)
add_subdirectory(imcommon)
add_subdirectory(protocol)
add_subdirectory(protocol_test)
add_subdirectory(client)
add_subdirectory(server)
add_subdirectory(server_test)
#add_subdirectory(p2p)
add_subdirectory(media)
